// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SettingItemMin should match snapshot 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-sm-12 section-title"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
    >
      <li
        className="setting-list-item"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <SaveButton
          defaultMessage="Save"
          disabled={false}
          onClick={[Function]}
          saving={false}
          savingMessage="Saving"
        />
        <button
          className="btn btn-sm cursor--pointer style--none"
          id="titleCancel"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, on clientError 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-sm-12 section-title"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
    >
      <li
        className="setting-list-item"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <div
          className="form-group"
        >
          <label
            className="col-sm-12 has-error"
            id="clientError"
          >
            clientError
          </label>
        </div>
        <SaveButton
          defaultMessage="Save"
          disabled={false}
          onClick={[Function]}
          saving={false}
          savingMessage="Saving"
        />
        <button
          className="btn btn-sm cursor--pointer style--none"
          id="titleCancel"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, on serverError 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-sm-12 section-title"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
    >
      <li
        className="setting-list-item"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <div
          className="form-group"
        >
          <label
            className="col-sm-12 has-error"
            id="serverError"
          >
            serverError
          </label>
        </div>
        <SaveButton
          defaultMessage="Save"
          disabled={false}
          onClick={[Function]}
          saving={false}
          savingMessage="Saving"
        />
        <button
          className="btn btn-sm cursor--pointer style--none"
          id="titleCancel"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`components/SettingItemMin should match snapshot, without submit 1`] = `
<ul
  className="section-max form-horizontal"
>
  <li
    className="col-sm-12 section-title"
  >
    title
  </li>
  <li
    className="col-sm-12"
  >
    <ul
      className="setting-list"
    >
      <li
        className="setting-list-item"
      >
        input_1
      </li>
      <li
        className="setting-list-item"
      >
        <hr />
        <button
          className="btn btn-sm cursor--pointer style--none"
          id="titleCancel"
          onClick={[Function]}
        >
          <FormattedMessage
            defaultMessage="Cancel"
            id="setting_item_max.cancel"
            values={Object {}}
          />
        </button>
      </li>
    </ul>
  </li>
</ul>
`;
